# topic-classifier-api

./: .gitignore  Dockerfile  Procfile  README.md  app.py  check_health.py  create_minimal_model.py  create_small_model.py  example_usage.py  minimal_model.joblib  model_artifacts.joblib  model_small.joblib  pyproject.toml  render.yaml  requirements.txt  run_docker.bat  run_local_server.py  setup.py  test_api.py  test_deployed_api.py  test_detailed_api.py  test_docker.sh  test_live_api.py  train_model.py  wsgi.py
