[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "topic-classifier-api"
version = "1.0.0"
description = "Research Paper Topic Classification API"
requires-python = ">=3.9"
dependencies = [
    "flask>=2.0.1",
    "gunicorn>=20.1.0",
    "scikit-learn>=1.0.2",
    "numpy>=1.21.2",
    "pandas>=1.3.3",
    "joblib>=1.1.0"
]